# openclaw2go-llamacpp

./: convert_hf_to_gguf.py
.github/workflows/: rebase-on-release.yml
common/: arg.cpp  common.h  speculative.cpp
examples/speculative-simple/: speculative-simple.cpp
gguf-py/gguf/: constants.py
include/: llama.h
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-context.h  llama-graph.cpp  llama-graph.h  llama-hparams.h  llama-model.cpp  llama-model.h  llama-quant.cpp
src/models/: eagle3.cpp  llama.cpp  models.h  openai-moe-iswa.cpp  qwen3.cpp  qwen3moe.cpp
tools/: CMakeLists.txt
tools/liquid-audio/: CMakeLists.txt  README.md  cli.cpp  convert_vocoder_to_gguf.py  liquid_audio_chat.py  liquid_audio_example.py  runner.cpp  runner.h  server.cpp
tools/mtmd/: CMakeLists.txt  audio-decoder.cpp  audio-decoder.h  mtmd-helper.cpp  mtmd-helper.h  mtmd.cpp  mtmd.h
tools/server/: server-common.cpp  server-common.h  server-context.cpp  server-task.cpp  server-task.h
